--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
             
             <tr>
                 <td>Task1</td>
-                <td><a href="https://github.com/RonakSharma7860/Mern_Task/blob/main/task1.html">Link1</a></td>
+                <td><a href="https://github.com/RonakSharma7860/TASKMERN/blob/main/New%20folder/task1.html">Link1</a></td>
             </tr>
             <tr>
                 <td>Task2</td>
-                <td><a href="https://github.com/RonakSharma7860/Mern_Task/blob/main/task2.html">Link2</a></td>
+                <td><a href="https://github.com/RonakSharma7860/TASKMERN/blob/main/New%20folder/task2.html">Link2</a></td>
             </tr>
             <tr>
                 <td>Task3</td>
-                <td><a href="https://github.com/RonakSharma7860/Mern_Task/blob/main/task3.html">Link3</a></td>
+                <td><a href="https://github.com/RonakSharma7860/TASKMERN/blob/main/New%20folder/task3.html">Link3</a></td>
             </tr>
             <tr>
                 <td>Task4</td>
-                <td><a href="https://github.com/RonakSharma7860/Mern_Task/blob/main/task4.html">Link4</a></td>
+                <td><a href="https://github.com/RonakSharma7860/TASKMERN/blob/main/New%20folder/task4.html">Link4</a></td>
             </tr>
             <tr>
                 <td>Task5</td>
-                <td><a href="https://github.com/RonakSharma7860/Mern_Task/blob/main/task5.html">Link5</a></td>
+                <td><a href="https://github.com/RonakSharma7860/TASKMERN/blob/main/New%20folder/task5.html">Link5</a></td>
             </tr>
         </table>
     </center>
@@ -57,35 +57,35 @@
             
             <tr>
                 <td>Task1</td>
-                <td><a href="https://github.com/RonakSharma7860/Mern_Task/blob/main/task_1.html">Link1</a></td>
+                <td><a href="https://github.com/RonakSharma7860/TASKMERN/blob/main/New%20folder/task_1.html">Link1</a></td>
             </tr>
             <tr>
                 <td>Task2horizontal</td>
-                <td><a href="https://github.com/RonakSharma7860/Mern_Task/blob/main/task2HorizontalNav.html">Link2</a></td>
+                <td><a href="https://github.com/RonakSharma7860/TASKMERN/blob/main/New%20folder/task2HorizontalNav.html">Link2</a></td>
             </tr>
             <tr>
                 <td>Task2vertical</td>
-                <td><a href="https://github.com/RonakSharma7860/Mern_Task/blob/main/task2VerticalNav.html">Link3</a></td>
+                <td><a href="https://github.com/RonakSharma7860/TASKMERN/blob/main/New%20folder/task2VerticalNav.html">Link3</a></td>
             </tr>
             <tr>
                 <td>Task3</td>
-                <td><a href="https://github.com/RonakSharma7860/Mern_Task/blob/main/task_3.html">Link4</a></td>
+                <td><a href="https://github.com/RonakSharma7860/TASKMERN/blob/main/New%20folder/task_3.html">Link4</a></td>
             </tr>
             <tr>
                 <td>Task4</td>
-                <td><a href="https://github.com/RonakSharma7860/Mern_Task/blob/main/task_4.html">Link5</a></td>
+                <td><a href="https://github.com/RonakSharma7860/TASKMERN/blob/main/New%20folder/task_4.html">Link5</a></td>
             </tr>
             <tr>
                 <td>Task5</td>  
-                <td><a href="https://github.com/RonakSharma7860/Mern_Task/blob/main/task_5.html">Link6</a></td>
+                <td><a href="https://github.com/RonakSharma7860/TASKMERN/blob/main/New%20folder/task_5.html">Link6</a></td>
             </tr>
             <tr>
                 <td>Task6</td>
-                <td><a href="https://github.com/RonakSharma7860/Mern_Task/blob/main/task_6.html">Link7</a></td>
+                <td><a href="https://github.com/RonakSharma7860/TASKMERN/blob/main/New%20folder/task_6.html">Link7</a></td>
             </tr>
             <tr>
                 <td>Task7</td>
-                <td><a href="https://github.com/RonakSharma7860/Mern_Task/blob/main/task_7.html">Link8</a></td>
+                <td><a href="https://github.com/RonakSharma7860/TASKMERN/blob/main/New%20folder/task_7.html">Link8</a></td>
             </tr>
         </table>
     </center>
